--- a/style.css
+++ b/style.css
@@ -9,8 +9,9 @@
     /* overflow-x:hidden; */
 }
 
-html, body {
-    overflow-x:hidden;
+html,
+body {
+    overflow-x: hidden;
     font-family: var(--ff-alata);
     font-size: var(--fs-regular);
 }
@@ -121,6 +122,17 @@ nav ul li:hover::after {
     padding-bottom: 100px;
 }
 
+.sticky {
+    position: fixed;
+    width: 100%;
+    justify-content: space-evenly;
+    left: 0;
+    background-color: #0A0A0A;
+    z-index: 10;
+    transition: 0.5s;
+    padding-bottom: 30px;
+}
+
 /* About Us */
 .about-us {
     position: relative;
@@ -150,7 +162,8 @@ nav ul li:hover::after {
 }
 
 .about-us .content-box p,
-.move-right, .review {
+.move-right,
+.review {
     font-size: var(--fs-regular);
     color: var(--very-dark-gray);
     line-height: 1.5rem;
@@ -165,26 +178,45 @@ nav ul li:hover::after {
     text-align: right;
 }
 
+.cta {
+    display: flex;
+    justify-content: right;
+}
+
+.cta-button {
+    width: max-content;
+    padding: 12px 15px;
+    border: 3px solid var(--white);
+    color: var(--white);
+    transition: ease-in-out .3s;
+    margin-bottom: 50px;
+}
+
+.cta-button:hover {
+    color: var(--black);
+    background: var(--very-dark-gray);
+}
 
 /* Programmes */
 .grid-item {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-    grid-gap: 30px;
+    grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+    grid-gap: 40px;
     place-content: center;
 }
 
 .item {
     position: relative;
     cursor: pointer;
-    height: 450px;
+    margin-bottom: 50px;
+    height: 300px;
 }
 
 .item img {
     height: 100%;
     width: 100%;
-    object-fit: cover;
-    object-position: center;
+    object-fit: cover; 
+    object-position: center; 
 }
 
 .item::after {
@@ -206,10 +238,6 @@ nav ul li:hover::after {
     left: 40px;
     z-index: 5;
     max-width: 200px;
-}
-
-.item:hover h3 {
-    color: var(--black);
 }
 
 .btn-summary {
@@ -385,12 +413,6 @@ footer p {
     /* Content */
     .heading-title h2 {
         text-align: center;
-    }
-
-    .btn-summary {
-        display: block;
-        width: max-content;
-        margin: auto;
     }
 }
 
